# brian_appkit_config_py

./: CLAUDE.md  README.md  pyproject.toml
examples/: foo_main.py  foo_settings.py
src/brian_appkit/: README.md  __init__.py  _logging.py  _shutdown.py  _types.py  bootstrap.py
tests/: conftest.py  test_bootstrap.py  test_logging.py  test_shutdown.py  test_types.py
