[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brian-appkit"
version = "0.1.0"
description = "Reusable config and logging bootstrap for Python CLI apps and daemons"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Brian Pond", email = "brian@datahenge.com" },
]
license = { text = "MIT" }
dependencies = [
    "pydantic-settings>=2.6",
    "platformdirs>=4.3",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = ["ruff>=0.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["brian_appkit"]
